--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,7 @@
 body {
-    width: 1440px;
-    height: 3300px;
     background: #FFF;
-    font-family: Roboto;
-    color: #FFFFFF;
+    font-family: Roboto, sans-serif;
+    color: #434455;
 }
 .title-portfolio {
     color: var(--NAVY-BLUE, #2E2F42);
