--- a/css/styles.css
+++ b/css/styles.css
@@ -3,32 +3,174 @@ body {
     font-family: Roboto, sans-serif;
     color: #434455;
 }
+.nav-logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+}
+
+.nav-link {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+.nav-link .link:hover {
+    color: #404bbf;
+}
+
+.nav-link .link:focus {
+    color: #404bbf;
+}
+
+.nav-address {
+    font-style: normal;
+}
+
+.nav-address-mail {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.nav-address-mail .link:hover {
+    color: #404bbf;
+}
+
+.nav-address-mail .link:focus {
+    color: #404bbf;
+}
+
+.first-section {
+    background-color: #2e2f42;
+}
+
+.first-section-title {
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+}
+
+.first-section-button {
+    background-color: #4D5AE5;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+.first-section-button .link:hover {
+    background-color: #404BBF;
+}
+
+.first-section-button .link:focus {
+    background-color: #404BBF;
+}
+
+.second-section-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.second-section-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.third-section {
+    background-color: #F4F4FD;
+}
+
+.third-section-title {
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
+}
+
+.third-section-photo {
+    background-color: #FFFFFF;
+}
+
+.third-section-name {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.third-section-profession {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
 .title-portfolio {
-    color: var(--NAVY-BLUE, #2E2F42);
+    color: #2E2F42;
         text-align: center;
-        font-family: Roboto;
         font-size: 36px;
         font-style: normal;
         font-weight: 700;
-        line-height: 40px;
-        letter-spacing: 0.72px;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
         text-transform: capitalize;
 }
 .description-portfolio {
-color: var(--NAVY-BLUE, #2E2F42);
-    font-family: Roboto;
+color: #2E2F42;
     font-size: 20px;
     font-style: normal;
     font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0.4px;
+    line-height: 1.2x;
+    letter-spacing: 0.02em;
 }
 .description-portfolio-text {
-    color: var(--SLATE, #434455);
-        font-family: Roboto;
+    color: #434455;
         font-size: 16px;
         font-style: normal;
         font-weight: 400;
-        line-height: 24px;
-        letter-spacing: 0.32px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+}
+
+.footer-info {
+    background-color: #2e2f42;
+}
+
+.footer-logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+}
+
+.logo-studio {
+    color: #f4f4fd;
+}
+.footer-text {
+    line-height: 1.5;
+    color: #F4F4FD;
+    letter-spacing: 0.02em;
 }
