--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,7 @@ color: #2E2F42;
     font-size: 20px;
     font-style: normal;
     font-weight: 500;
-    line-height: 1.2x;
+    line-height: 1.2;
     letter-spacing: 0.02em;
 }
 .description-portfolio-text {
